--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
     <p></p>
     <a href="https://ctext.org/analects/xue-er/zhs">How to become the goat</a>
 
+    <p id="a1"><a href="second.html">Here another page</a></p>
   </body>
 </html>
